# learn-vulkan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  flake.nix  imgui.ini  justfile
assets/: frag.spv  shader.frag  shader.frag.spv  shader.vert  shader2.frag  shader2.frag.spv  shader2.vert  shader2.vert.spv  vert.spv
examples/1-triangle/: CMakeLists.txt  main.cpp
examples/2-quad/: CMakeLists.txt  main.cpp
examples/3-quad_new/: CMakeLists.txt  main.cpp
examples/quad/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
ext/: CMakeLists.txt
framework/: CMakeLists.txt  assets.cpp  assets.h  command_block.cpp  command_block.h  dear_imgui.cpp  dear_imgui.h  descriptor_buffer.cpp  gpu.cpp  gpu.h  module.cpp  renderer.cpp  renderer.h  resource_buffering.cpp  scoped.cpp  scoped.h  scoped_waiter.cpp  shader_program.cpp  swapchain.cpp  swapchain.h  texture.cpp  transform.cpp  vma.cpp  window.cpp  window.h
framework_module/: CMakeLists.txt  assets.cpp  command_block.cpp  dear_imgui.cpp  gpu.cpp  module.cpp  renderer.cpp  resource_buffering.cpp  scoped.cpp  scoped_waiter.cpp  shader_program.cpp  swapchain.cpp  vma.cpp  window.cpp
src/: app.cpp  app.h  command_block.cpp  dear_imgui.cpp  dear_imgui.h  gpu.cpp  main.cpp  resource_buffering.h  scoped_waiter.h  scoped_waiter.hpp  shader_program.cpp  shader_program.h  swapchain.cpp  swapchain.h  vertex.h  vma.cpp  vma.h  window.cpp  window.h
